--- a/raugeas/Cargo.toml
+++ b/raugeas/Cargo.toml
@@ -13,3 +13,7 @@ rust-version = "1.77"
 raugeas_sys = { path = "../raugeas_sys", version = "0.2.0" }
 bitflags = "2.6.0"
 libc = "0.2.43"
+
+[features]
+bundled = ["raugeas_sys/bundled"]
+default = []
