--- a/raugeas_src/testcrate/Cargo.toml
+++ b/raugeas_src/testcrate/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Alexis Mousset <alexis.mousset@rudder.io>"]
 links = "augeas"
 build = "build.rs"
+edition = "2021"
 
 [build-dependencies]
 raugeas_src = { path = ".." }
